src/test/ui/const-generics/type-dependent/issue-71382.full.stderr
error: using function pointers as const generic parameters is forbidden
  --> $DIR/issue-71382.rs:16:23
   |
LL |     fn test<const FN: fn() -> u8>(&self) -> u8 {
   |                       ^^^^^^^^^^

error: aborting due to previous error

